# Voyagent

./: .gitignore  .npmrc  .prettierignore  CHANGELOG.md  IMPLEMENTATION-PLAN.md  Makefile  README.md  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.placeholder.txt
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/commands/: auth.rs  local_driver.rs  mod.rs  (+1 more)
drivers/_contracts/: README.md  __init__.py  accounting.py  bank.py  base.py  bsp.py  cache.py  card.py  document.py  errors.py  fare_search.py  hotel_booking.py  hotel_search.py  manifest.py  messaging.py  passenger_resolver.py  payment.py  pnr.py  pyproject.toml  statutory.py  visa_portal.py
drivers/amadeus/: README.md  __init__.py  auth.py  client.py  config.py  driver.py  errors.py  mapping.py  pyproject.toml
drivers/bsp_india/: README.md  __init__.py  airlines.py  client.py  config.py  driver.py  errors.py  haf_parser.py  haf_records.py  mapping.py  pyproject.toml
drivers/tally/: README.md  __init__.py  client.py  config.py  driver.py  errors.py  mapping.py  pyproject.toml  xml_builder.py  xml_parser.py
drivers/tbo/: __init__.py  client.py  config.py  driver.py  errors.py  manifest.py  pyproject.toml
drivers/vfs/: README.md  __init__.py  config.py  driver.py  errors.py  pyproject.toml
schemas/canonical/: README.md  __init__.py  airports.py  finance.py  identity.py  lifecycle.py  primitives.py  pyproject.toml  travel.py
schemas/storage/: __init__.py  api_key.py  audit.py  auth.py  base.py  credentials.py  crypto.py  enquiry.py  invite.py  invoice.py  ledger.py  offer_cache_note.md  passenger.py  pyproject.toml  session.py  session_cost.py  tenant.py  tenant_settings.py  user.py
services/agent_runtime/: README.md  pyproject.toml
services/agent_runtime/src/voyagent_agent_runtime/: __init__.py  _agent_loop.py  anthropic_client.py  cli.py  cost_tracker.py  drivers.py  events.py  offer_cache.py  orchestrator.py  passenger_resolver.py  prompts.py  rate_limiter.py  runtime.py  session.py  stores_pg.py  tenant_registry.py  tool_cache.py  tools.py
services/api/: README.md  pyproject.toml
services/api/src/voyagent_api/: approvals.py  audit.py  auth.py  chat.py  db.py  enquiries.py  main.py  metrics.py  observability.py  reports.py  revocation.py  tenancy.py  tenant_settings.py  webhooks.py
services/browser_runner/: README.md  pyproject.toml
services/browser_runner/src/voyagent_browser_runner/: __init__.py  artifacts.py  browser_pool.py  cli.py  client.py  job.py  queue.py  settings.py  steps.py  worker.py
services/worker/: README.md  pyproject.toml
services/worker/src/voyagent_worker/: __init__.py
tests/: README.md  conftest.py  pyproject.toml
tests/agent_runtime/: conftest.py  test_accounting_tools.py  test_approvals.py  test_cost_tracker.py  test_domain_agents.py  test_draft_invoice_tool.py  test_events.py  test_hotels_holidays.py  test_offer_cache.py  test_orchestrator.py  test_orchestrator_errors.py  test_passenger_resolver_pg.py  test_prompts.py  test_rate_limiter.py  test_runtime.py  test_runtime_tenant_model.py  test_stores_pg.py  test_tenant_registry.py  test_ticketing_visa.py  test_tool_cache.py  test_tools.py
tests/api/: test_api_keys.py  test_approvals.py  test_audit.py  test_audit_export.py  test_auth.py  test_auth_errors.py  test_auth_inhouse.py  test_auth_profile.py  test_chat.py  test_chat_sessions_crud.py  test_enquiries.py  test_enquiries_search.py  test_invites.py  test_main.py  test_metrics.py  test_observability.py  test_password_reset.py  test_password_strength.py  test_reports.py  test_reports_trial_balance.py  test_revocation.py  test_tenant_settings.py  test_totp.py  test_webhooks.py
tests/browser_runner/: test_artifacts.py  test_handlers_registry.py  test_queue.py
tests/canonical/: test_airports.py  test_finance.py  test_hotel.py  test_identity.py  test_lifecycle.py  test_primitives.py  test_travel.py
tests/drivers/amadeus/: conftest.py  test_client.py  test_driver.py  test_errors.py  test_mapping.py
tests/drivers/bsp_india/: conftest.py  test_airlines.py  test_driver.py  test_errors.py  test_haf_parser.py  test_mapping.py
tests/drivers/tally/: conftest.py  test_driver.py  test_errors.py  test_mapping.py  test_xml_builder.py  test_xml_parser.py
tests/drivers/tbo/: test_client.py  test_driver.py  test_mapping.py
tests/drivers/vfs/: conftest.py  test_driver.py  test_errors.py  test_job_dispatch.py
tests/e2e/: .gitignore  README.md  package.json  playwright.config.ts  tsconfig.json
tests/e2e/fixtures/: authed.ts  axe.ts
tests/e2e/specs/: _setup.ts  a11y.spec.ts  accessibility.spec.ts  api-docs.spec.ts  api-smoke.spec.ts  app-gated.spec.ts  approvals.spec.ts  auth.spec.ts  command-palette.spec.ts  contact-form.spec.ts  docs.spec.ts  domains.spec.ts  enquiries.spec.ts  error-pages.spec.ts  i18n.spec.ts  marketing-landing.spec.ts  marketing-nav.spec.ts  metadata.spec.ts  mobile.spec.ts  performance-budget.spec.ts  redirect-safety.spec.ts  reports.spec.ts  theme-toggle.spec.ts  web-chat.spec.ts
tests/infra/: README.md  test_pg_backup_scripts.sh  test_verify_secrets.sh
tests/integration/: README.md  __init__.py  conftest.py  test_api_roundtrip.py
tests/live/: README.md  pyproject.toml
tests/live/tests_live/: _http.py  conftest.py  test_api_chat_unavailable.py  test_api_contract.py  test_api_openapi.py  test_app_gated.py  test_cors_headers.py  test_docs.py  test_domains.py  test_health.py  test_marketing_pages.py  test_metadata_routes.py  test_performance_budget.py
tests/load/: README.md  locustfile.py  scenarios.md
tests/services/browser_runner/: conftest.py  test_queue.py  test_vfs_handlers.py  test_worker.py
tests/storage/: __init__.py  conftest.py  test_api_key.py  test_approvals_migration.py  test_crypto.py  test_enquiry.py  test_invite.py  test_invoice.py  test_ledger.py  test_models.py  test_session_cost.py  test_tenant_settings.py
tests/tools/: test_seed_demo.py
(+302 files in other folders)
