[project]
name = "voyagent-tests"
version = "0.0.0"
description = "Voyagent workspace test suite (dev-only)."
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "voyagent-schemas-canonical",
    "voyagent-schemas-storage",
    "voyagent-agent-runtime",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# `tests/` is not really a distributable package — it exists so uv can treat
# the directory as a workspace member and resolve dev-time deps. Hatch needs
# at least one package to build a wheel; point it at the already-existing
# `canonical/` subpackage (authored separately).
[tool.hatch.build.targets.wheel]
packages = ["canonical"]

[tool.uv.sources]
voyagent-schemas-canonical = { workspace = true }
voyagent-schemas-storage = { workspace = true }
voyagent-agent-runtime = { workspace = true }
