[project]
name = "voyagent-driver-amadeus"
version = "0.1.0"
description = "Voyagent reference driver — Amadeus Self-Service (for Travelers) REST APIs."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "voyagent-schemas-canonical",
    "voyagent-driver-contracts",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Mirrors the force-include pattern from drivers/_contracts so that the
# import path remains `drivers.amadeus` at runtime (namespace-style).
[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.wheel.force-include]
"." = "voyagent_driver_amadeus"

[tool.uv.sources]
voyagent-schemas-canonical = { workspace = true }
voyagent-driver-contracts = { workspace = true }

[tool.uv]
dev-dependencies = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
