[project]
name = "voyagent-driver-tally"
version = "0.1.0"
description = "Voyagent reference driver — Tally Prime via Tally Gateway Server (XML over HTTP)."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "lxml>=5.3",
    "voyagent-schemas-canonical",
    "voyagent-driver-contracts",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Mirrors the force-include pattern from drivers/amadeus so that the
# import path remains `drivers.tally` at runtime (namespace-style).
[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.wheel.force-include]
"." = "voyagent_driver_tally"

[tool.uv.sources]
voyagent-schemas-canonical = { workspace = true }
voyagent-driver-contracts = { workspace = true }

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]
