[project]
name = "voyagent-driver-tbo"
version = "0.1.0"
description = "Voyagent driver — TBO (Travel Boutique Online) Hotels aggregator."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "voyagent-schemas-canonical",
    "voyagent-driver-contracts",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.wheel.force-include]
"." = "voyagent_driver_tbo"

[tool.uv.sources]
voyagent-schemas-canonical = { workspace = true }
voyagent-driver-contracts = { workspace = true }

[tool.uv]
dev-dependencies = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
