[project]
name = "voyagent-schemas-storage"
version = "0.0.0"
description = "Voyagent storage schema (SQLAlchemy 2.0) — persistence mirror of the canonical model."
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "voyagent-schemas-canonical",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Installed as importable path ``schemas.storage`` so application code can write
# ``from schemas.storage import Base, Tenant`` just like it already writes
# ``from schemas.canonical import Money``. Mirrors the force-include pattern
# used by ``schemas/canonical/pyproject.toml``.
[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.wheel.force-include]
"." = "schemas/storage"

[tool.uv.sources]
voyagent-schemas-canonical = { workspace = true }
