[project]
name = "voyagent-agent-runtime"
version = "0.0.0"
description = "Voyagent agent orchestrator, domain agents, and tool runtime (skeleton)."
requires-python = ">=3.12"
dependencies = [
    "voyagent-schemas-canonical",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voyagent_agent_runtime"]

[tool.uv.sources]
voyagent-schemas-canonical = { workspace = true }
