[project]
name = "voyagent-agent-runtime"
version = "0.1.0"
description = "Voyagent agent orchestrator, domain agents, and tool runtime."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "jsonschema>=4.23",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "redis[hiredis]>=5.0",
    "voyagent-schemas-canonical",
    "voyagent-schemas-storage",
    "voyagent-driver-contracts",
    "voyagent-driver-amadeus",
]

[project.scripts]
voyagent-agent-runtime = "voyagent_agent_runtime.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Mirrors the force-include pattern used by drivers/_contracts so the
# runtime import path stays `voyagent_agent_runtime` regardless of the
# workspace layout.
[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.wheel.force-include]
"src/voyagent_agent_runtime" = "voyagent_agent_runtime"

[tool.uv.sources]
voyagent-schemas-canonical = { workspace = true }
voyagent-schemas-storage = { workspace = true }
voyagent-driver-contracts = { workspace = true }
voyagent-driver-amadeus = { workspace = true }

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "aiosqlite>=0.20",
]
