[project]
name = "voyagent-api"
version = "0.0.0"
description = "Voyagent public HTTP + SSE API (FastAPI)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "voyagent-schemas-canonical",
]

[project.scripts]
voyagent-api = "voyagent_api.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voyagent_api"]

[tool.uv.sources]
voyagent-schemas-canonical = { workspace = true }
