[project]
name = "voyagent-browser-runner"
version = "0.0.0"
description = "Voyagent Playwright worker service for browser-automation drivers (skeleton)."
requires-python = ">=3.12"
dependencies = [
    "voyagent-schemas-canonical",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voyagent_browser_runner"]

[tool.uv.sources]
voyagent-schemas-canonical = { workspace = true }
