[project]
name = "voyagent-worker"
version = "0.0.0"
description = "Voyagent Temporal workers for durable, long-running workflows (skeleton)."
requires-python = ">=3.12"
dependencies = [
    "voyagent-schemas-canonical",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voyagent_worker"]

[tool.uv.sources]
voyagent-schemas-canonical = { workspace = true }
