[project]
name = "voyagent-tests-live"
version = "0.0.0"
description = "Live HTTP integration tests for the deployed Voyagent stack"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tests_live"]
force-include = { "tests_live" = "tests_live" }

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pytest-xdist>=3.6",
    "pytest-json-report>=1.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests_live"]
addopts = "-ra --strict-markers"
markers = [
    "contract: long-running or slower contract-level live tests",
]
