[package]
name = "voyagent-desktop"
version = "0.0.0"
description = "Voyagent desktop shell (Tauri 2)"
edition = "2021"
rust-version = "1.77"

# Binary + library layout is the Tauri 2 default.
[lib]
name = "voyagent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-stronghold = "2.0"
tauri-plugin-deep-link = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
# Default feature set. Tauri's custom-protocol is required for bundling.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
